<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dylan.umpirebuddy.MainActivity"
    tools:showIn="@layout/activity_main">

    <include
        layout="@layout/action_bar"
        android:id="@+id/action_bar"/>


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/strikebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="117dp"
        android:layout_marginEnd="59dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="330dp"
        android:background="@android:color/background_dark"
        android:text="@string/StrikeBtn"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ballbtn"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Button
        android:id="@+id/ballbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="117dp"
        android:layout_marginEnd="93dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="330dp"
        android:background="@android:color/background_dark"
        android:text="@string/BallBtn"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/strikebtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/BallCounterViewMain"
        android:layout_width="43dp"
        android:layout_height="54dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="132dp"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/StrikeCounterviewMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/StrikeCounterviewMain"
        android:layout_width="43dp"
        android:layout_height="54dp"
        android:layout_marginBottom="321dp"
        android:layout_marginEnd="132dp"
        android:layout_marginTop="23dp"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BallCounterViewMain" />

    <TextView
        android:id="@+id/BallText"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="40dp"
        android:text="@string/Ball"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/StrikeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/StrikeText"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="23dp"
        android:text="@string/Strike"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BallCounterViewMain" />

    <TextView
        android:id="@+id/TotalOuts"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="115dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="63dp"
        android:text="@string/total_outs_0"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ballbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StrikeCounterviewMain" />


</android.support.constraint.ConstraintLayout>
